--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,21 @@ body {
   color: blue
 }
 
+h2 {
+  text-align: center;
+}
 
+ul.nav {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.nav li {
+  display: inline-block;
+  padding: 10px;
+}
 
 #education {
   height: 100vh;
@@ -17,4 +31,10 @@ body {
 #skills {
   height: 100vh;
   background-color: pink;
+}
+#education, #experience, #skills p {
+  font-style: italic;
+}
+p.test {
+  text-align: center;
 }
